$Id$

0.7.2beta
        - new utility dhcpd-lease-view for viewing dhcpd.leases file
          by Riku Meskanen
	- sauron: slave server now inherits also "forward" zones patch
	  by Ken McKinlay
	- sauron: fixed router entry generatio (dhcpd.conf) if more than
	  one network (not subnet) is defined for server
	- CGI interface: fixed "disappearing" DHCP fields when editing
	  subnet entry when using DBD::Pg interface
	- generatehosts: fix to :N: parameter handling by Ken McKinlay
	- new utility: export-hosts to export host data in CSV format
	- moduser: added ability to add group(s) to user from command line
	- sauron: fix to named.conf "logging" section generation 
	  by Riku Meskanen
	- CGI interface: login debugging support by Riku Meskanen
	- CGI browser: fix to "info" field searching and support for 
	  "dhcp only" records by Erik Ruwalder
	- dbformat changes: new fields: users.person
	- new utility: export-ip-list for generating lists of active
	  IPs in given (sub)nets (for automatically updating access/accounting
	  lists in firewalls)
	- CGI interface: new command "New Search" in Hosts menu	
	- import: fixed IP number parsing (named.conf)
	- CGI interface: fixed "-> This Subnet" button in host display
	- CGI interface: fixed "Show Hosts" button in network/subnet display
	- moduser/modgroup: now lists also IDs for group memberships,
	  making it easier to remove group membership from a user
	- fixed server selection bug in web interface	
	- cleaned up import-ethers (also added --verbose option)
	
0.7.1
	- added "subgroups" for defining additional group(s) for host(s),
	  currently subgroup memberships are used when generating DHCP class
	  entries in dhcpd.conf.
	- linking to "pages" inside Sauron now works (without frames)
	- A host can now be a member of one of more "subgroups" in addition
	  to one (main)group.
	- Database connection interface changed, new configuration
	  options DB_DSN,DB_USER,DB_PASSWORD are now used instead of
	  old DB_CONNECT.