@@ -94,18 +94,12 @@ my %zone_form = (
   {ftype=>2, tag=>'zentries', name=>'Custom zone file entries',
    type=>['text','text'], fields=>2, len=>[40,15], maxlen=>[100,20],
    empty=>[0,1], elabels=>['Zone Entry','comment'], iff=>['type','M']},
-  {ftype=>2, tag=>'allow_update', 
-   name=>'Allow dynamic updates (allow-update)', type=>['cidr','text'],
-   fields=>2, len=>[40,15], empty=>[0,1], elabels=>['CIDR','comment'],
-   iff=>['type','M']},
-  {ftype=>2, tag=>'allow_query', 
-   name=>'Allow queries from (allow-query)', type=>['cidr','text'],
-   fields=>2, len=>[40,15], empty=>[0,1], elabels=>['CIDR','comment'],
-   iff=>['type','M']},
-  {ftype=>2, tag=>'allow_transfer', 
-   name=>'Allow zone-transfers from (allow-transfer)', type=>['cidr','text'],
-   fields=>2, len=>[40,15], empty=>[0,1], elabels=>['CIDR','comment'],
-   iff=>['type','M']},
+  {ftype=>12, tag=>'allow_update', 
+   name=>'Allow dynamic updates (allow-update)', iff=>['type','M']},
+  {ftype=>12, tag=>'allow_query', 
+   name=>'Allow queries from (allow-query)', iff=>['type','M']},
+  {ftype=>12, tag=>'allow_transfer', 
+   name=>'Allow zone-transfers from (allow-transfer)', iff=>['type','M']},
   {ftype=>2, tag=>'also_notify', 
    name=>'[Stealth] Servers to notify (also-notify)', type=>['ip','text'],
    fields=>2, len=>[40,15], empty=>[0,1], elabels=>['IP','comment'],
