@@ -10,18 +10,18 @@ CREATE TABLE cidr_entries (
 	id	    SERIAL PRIMARY KEY, /* unique ID */
 	type        INT4 NOT NULL, /* type:
 				      0=acls
-				      1=server (allow-transfer),
-				      2=zone (allow-update),
-				      3=zone (masters),
-				      4=zone (allow-query), 
-				      5=zone (allow-transfer), 
-				      6=zone (also-notify),
-				      7=server (allow-query), 
-				      8=server (allow-recursion), 
-				      9=server (blackhole),
-				      10=server (listen-on), 
-				      11=server (forwarders),
-				      12=zone (forwarders),
+				      1=server (allow-transfer),  x
+				      2=zone (allow-update),      X
+				      3=zone (masters),           (iponly)
+				      4=zone (allow-query),       X
+				      5=zone (allow-transfer),    X
+				      6=zone (also-notify),       (iponly)
+				      7=server (allow-query),     x 
+				      8=server (allow-recursion), x 
+				      9=server (blackhole),       x
+				      10=server (listen-on),      (cidronly)
+				      11=server (forwarders),     (iponly)
+				      12=zone (forwarders),       (iponly)
 				      13=reserved */
         ref	    INT4 NOT NULL, /* ptr to table speciefied by type field
 					-->acls.id
